fix layout on mobile

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -342,6 +342,7 @@
 }
 .left-step3-editor-copy a {
   display: inline-block;
+  overflow-wrap: anywhere;
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0;
